@@ -2,7 +2,7 @@
   <packages>
     <package name="WillStrohl.WidgetSuite" type="Widget" version="1.0.0">
       <friendlyName>DNN Widget Suite</friendlyName>
-      <description>This widget will parse a page in DotNetNuke, and add an image to indicate that a link points to an external website.</description>
+      <description>This is a suite of widgets that allows you to perform various functions within your DotNetNuke website, client-side, using the built-in widget framework.</description>
       <owner>
         <name>Will Strohl</name>
         <organization>Will Strohl</organization>
@@ -15,6 +15,12 @@
         <component type="Widget">
           <widgetFiles>
             <basePath>WillStrohl</basePath>
+            <widgetFile>
+              <name>WillStrohl.Widgets.SocialBookmarkWidget.js</name>
+            </widgetFile>
+            <widgetFile>
+              <name>WillStrohl.Widgets.TechnoratiInfoWidget.js</name>
+            </widgetFile>
             <widgetFile>
               <name>WillStrohl.Widgets.ExternalLinks.js</name>
             </widgetFile>
